--- a/app/src/pages/skeleton/Skeleton.module.css
+++ b/app/src/pages/skeleton/Skeleton.module.css
@@ -3,6 +3,7 @@
   position: relative;
   font-weight: 900;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: var(--title-font-size);
 }
 .pageLabel {
   cursor: pointer;
@@ -28,7 +29,6 @@
   min-height: 852px;
   max-height: 852px;
   text-align: center;
-  font-size: 32px;
   color: var(--color-black);
   font-family: var(--font-roboto);
 }
@@ -40,4 +40,9 @@
     min-height: 852px;
     max-height: 852px;
   }
+}
+
+.darkMode {
+	background-color: var(--background-color-dark); /* Use dark mode background color */
+	color: var(--text-color-dark); /* Use dark mode text color */
 }
