--- a/app/src/pages/QuestsPage.module.css
+++ b/app/src/pages/QuestsPage.module.css
@@ -41,20 +41,12 @@
         max-height: 852px;
     }
 }
-.button {
-    background-color: #007bff;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 18px;
-    margin-top: 20px;
-}
 
 .questSection {
-    padding: 10px;
-  }
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center horizontally */
+}
 
 .questTitle {
     text-align: left;
@@ -63,14 +55,9 @@
 
 .questBlock {
     background-color: rgb(79, 116, 176);
-    display: block;
-    height: auto; /* allows content to determine height*/
-    margin-top: 20px;
-    margin-right: 1%;
-    margin-left: 1%;
-    overflow: hidden;
-    padding: 10px;
-    box-sizing: border-box; /* adds padding to width and height */
+    width: 90%; /* Adjust width as needed */
+    margin-top: 5px;
+    padding: 5px;
     border-radius: 25px;
 }
 
@@ -83,12 +70,12 @@
 }
 
 .inProgressQuests {
-    margin-top: 200px;
+    margin-top: 175px;
     background-color: rgb(127, 127, 127);
     display: block;
-    padding: 25px;
+    padding: 5px;
     box-sizing: border-box; /* adds padding to width and height */
-    border-radius: 25px 25px 0px 0px;
+    border-radius: 15px 15px 0px 0px;
     font-size: smaller;
     color: white; /* Text color */
 }
@@ -96,21 +83,34 @@
 .availableQuests {
     background-color: rgb(137, 136, 176);
     display: block;
-    padding: 25px;
-    padding-bottom: 100px;
+    padding: 5px;
+    padding-bottom: 5x;
     box-sizing: border-box; /* adds padding to width and height */
-    border-radius: 0px 0px 25px 25px;
+    border-radius: 0px 0px 15px 15px;
     font-size: smaller;
-    color: white; /* Text color */
+    color: white; /* Text color*/
+    margin-bottom: 5px;
+}
+
+.completedQuests {
+    margin-top: 175px;
+    background-color: rgb(13, 113, 163);
+    display: block;
+    padding: 5px;
+    box-sizing: border-box; /* adds padding to width and height */
+    border-radius: 15px 15px 0px 0px;
+    font-size: smaller;
+    color: white; /* Text color */   
+    margin-bottom: 5px;
 }
 
 .button {
     background-color: #007bff;
     color: white;
-    padding: 10px 20px;
+    padding: 3px 6px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 18px;
-    position: absolute; 
-  }
+    font-size: 15px;
+    position: relative; /* Change position to relative */
+}
