--- a/app/src/pages/quests/QuestsPage.module.css
+++ b/app/src/pages/quests/QuestsPage.module.css
@@ -6,6 +6,7 @@
     font-weight: 900;
     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 	font-size: var(--title-font-size);
+	font-size: var(--title-font-size);
 }
 .pageLabel {
     cursor: pointer;
@@ -118,4 +119,9 @@
     cursor: pointer;
     font-size: var(--button-font-size);
     position: relative; /* Change position to relative */
+}
+
+.darkMode {
+	background-color: var(--background-color-dark); /* Use dark mode background color */
+	color: var(--text-color-dark); /* Use dark mode text color */
 }
