--- a/app/src/pages/login/Login.css
+++ b/app/src/pages/login/Login.css
@@ -8,7 +8,7 @@ body {
         to bottom, 
         rgb(255 255 255 / 20%) 40%,
         rgb(91 133 176 / 80%) 100%
-      ), url('../../images/marblebackground.jpg');
+      ), url('../../../public/marblebackground.jpg');
 }
 
 h1 {
