--- a/app/src/pages/home/Home.module.css
+++ b/app/src/pages/home/Home.module.css
@@ -1,5 +1,6 @@
 .pagetitle {
   align-self: stretch;
+  margin: auto;
   position: relative;
   font-weight: 900;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -8,9 +9,9 @@
 .pageLabel {
   cursor: pointer;
   position: absolute;
-  top: 128px;
-  left: 17px;
-  width: 366px;
+  margin: auto;
+  top: 5%;
+  width: 100%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
