Adding Percentage stats to homepage

--- a/app/src/components/LifeQuestFormTriangle.module.css
+++ b/app/src/components/LifeQuestFormTriangle.module.css
@@ -21,19 +21,18 @@
   width: 83px;
   font-weight: 900;
   font-family: var(--font-roboto);
-  font-size: var(--font-size-13xl);
+  font-size: 2vw;
   outline: 0;
   top: 172px;
-  left: 120px;
+  left: 35%;
   color: var(--color-black);
 }
 .meicon {
   height: 15.9%;
   width: 21.01%;
   top: 0;
-  right: 42.45%;
   bottom: 84.1%;
-  left: 36.54%;
+  left: 36%;
   max-width: 100%;
   overflow: hidden;
   max-height: 100%;
@@ -45,7 +44,7 @@
   width: 83px;
   font-weight: 900;
   font-family: var(--font-roboto);
-  font-size: var(--font-size-13xl);
+  font-size: 2vw;
   outline: 0;
   position: absolute;
   top: 273px;
@@ -71,7 +70,7 @@
   width: 83px;
   font-weight: 900;
   font-family: var(--font-roboto);
-  font-size: var(--font-size-13xl);
+  font-size: 2vw;
   outline: 0;
   position: absolute;
   top: 273px;
