--- a/app/src/pages/quiz/QuizPage.module.css
+++ b/app/src/pages/quiz/QuizPage.module.css
@@ -88,5 +88,5 @@
 
 .darkMode {
 	background-color: var(--background-color-dark); 
-	color: var(--text-color-dark);
+	background-image: url('../../../public/blackmarblebackground.jpg');
 }
