--- a/app/src/pages/home/Home.module.css
+++ b/app/src/pages/home/Home.module.css
@@ -44,5 +44,5 @@
 }
 .darkMode {
 	background-color: var(--background-color-dark); /* Use dark mode background color */
-	color: var(--text-color-dark); /* Use dark mode text color */
+	background-image: url('../../../public/blackmarblebackground.jpg');
 }
